done main structure
grid behaviour mainly done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="grid-global-container">
+    <div class="grid-left-side">grid-left-side</div>
+    <div class="grid-right-side">
+      <div class="grid-content-header">
+        <div class="grid-content-header-top">
+          <div class="header-search">searchbar</div>
+          <div class="header-user-settings">user settings</div>
+        </div>
+        <div class="grid-content-header-bottom">
+          <div class="header-user-hi">Hi User</div>
+          <div class="header-menu">New Upload Share</div>
+        </div>
+      </div>
+      <div class="grid-content-central">
+        <div class="cards-global-wrapper">
+          <div class="card-title">Your Projects</div>
+          <div class="grid-content-central-main">
+            <div class="card">Card 1</div>
+            <div class="card">Card 2</div>
+            <div class="card">Card 3</div>
+            <div class="card">Card 4</div>
+            <div class="card">Card 5</div>
+            <div class="card">Card 6</div>
+          </div>
+        </div>
+
+        
+        <div class="grid-content-central-side">
+          <div class="side-wrapper">
+            <div class="side-title">Announcements</div>
+            <p class="side-content">Etiam luctus bibendum tortor non venenatis. Nam aliquam quam id diam pellentesque, vitae tincidunt enim consequat. Phasellus varius</p>
+          </div>
+
+          <div class="side-wrapper">
+            <div class="side-title">Trending</div>
+            <p class="side-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget pulvinar quam, vel scelerisque urna. Nunc mattis augue ligula, euismod bibendum tortor viverra vitae. Integer efficitur</p>
+              
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
