--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
   <title>Document</title>
 </head>
 <body>
   <div class="grid-global-container">
-    <div class="grid-left-side">grid-left-side</div>
+    <div class="grid-left-side">
+      <h1>Dashboard</h1>
+      <ul>
+        <li>Home</li>
+        <li>Profile</li>
+        <li>Messages</li>
+        <li>History</li>
+        <li>Tasks</li>
+        <li>Communities</li>
+      </ul>
+      <ul>
+        <li>Settings</li>
+        <li>Support</li>
+        <li>Privacy</li>
+      </ul>
+    </div>
     <div class="grid-right-side">
       <div class="grid-content-header">
         <div class="grid-content-header-top">
@@ -25,12 +44,24 @@
         <div class="cards-global-wrapper">
           <div class="card-title">Your Projects</div>
           <div class="grid-content-central-main">
-            <div class="card">Card 1</div>
-            <div class="card">Card 2</div>
-            <div class="card">Card 3</div>
-            <div class="card">Card 4</div>
-            <div class="card">Card 5</div>
-            <div class="card">Card 6</div>
+            <div class="card">Card 1
+              <p>In commodo et metus nec consectetur. Quisque bibendum risus lectus, id euismod elit consequat a. Sed vitae magna mauris. Nunc euismod faucibus ante et blandit.</p>
+            </div>
+            <div class="card">Card 2
+              <p>In fringilla ipsum finibus, faucibus ex in, bibendum nibh. Donec sed bibendum mi, et dapibus sapien. Ut ornare sodales tortor, non rhoncus magna.</p>
+            </div>
+            <div class="card">Card 3
+              <p>In mauris purus, malesuada vitae placerat eget, maximus eu mauris. Nunc eleifend quam a ante sodales faucibus eget at quam. Donec sagittis sodales nunc.</p>
+            </div>
+            <div class="card">Card 4
+              <p>Donec et est sem. Mauris lorem ipsum, finibus eget mi quis, scelerisque porta nunc. Mauris eget lobortis nibh. Aliquam ligula tortor, vehicula eu tristique ut, vehicula ac mauris. </p>
+            </div>
+            <div class="card">Card 5
+              <p>Vivamus eu lorem dignissim, aliquam velit vitae, condimentum diam. Praesent gravida leo sit amet interdum lobortis. Vivamus fringilla massa sem, nec mollis quam maximus ac.</p>
+            </div>
+            <div class="card">Card 6
+              <p>Quisque facilisis massa turpis, quis vulputate nunc hendrerit ut. Aliquam tristique scelerisque justo non porttitor. Fusce auctor nunc ut dictum volutpat.</p>
+            </div>
           </div>
         </div>
 
