--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-
+  <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
   <title>Document</title>
 </head>
 <body>
   <div class="grid-global-container">
     <div class="grid-left-side">
-      <h1>Dashboard</h1>
+      <h1><img src="img/dashboard.svg" width="38px" height="38px"><span>Dashboard</span></h1>
       <ul>
-        <li>Home</li>
-        <li>Profile</li>
-        <li>Messages</li>
-        <li>History</li>
-        <li>Tasks</li>
-        <li>Communities</li>
+        <li><img src="img/home.svg" width="22px" height="22px">Home</li>
+        <li><img src="img/profile.svg" width="22px" height="22px">Profile</li>
+        <li><img src="img/messages.svg" width="22px" height="22px">Messages</li>
+        <li><img src="img/history.svg" width="22px" height="22px">History</li>
+        <li><img src="img/tasks.svg" width="22px" height="22px">Tasks</li>
+        <li><img src="img/communities.svg" width="22px" height="22px">Communities</li>
       </ul>
       <ul>
-        <li>Settings</li>
-        <li>Support</li>
-        <li>Privacy</li>
+        <li><img src="img/settings.svg" width="22px" height="22px">Settings</li>
+        <li><img src="img/support.svg" width="22px" height="22px">Support</li>
+        <li><img src="img/privacy.svg" width="22px" height="22px">Privacy</li>
       </ul>
     </div>
     <div class="grid-right-side">
