added header icons

--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
     <div class="grid-right-side">
       <div class="grid-content-header">
         <div class="grid-content-header-top">
-          <div class="header-search">searchbar</div>
-          <div class="header-user-settings">user settings</div>
+          <div class="header-search">
+            <img src="img/search.svg" width="22px" height="22px" alt="magnifier">
+            <input name="search" type="text">
+
+            <img src="img/notifications.svg" width="22px" height="22px" alt="bell-ring">
+            <img src="img/profilepic.jpg" width="40px" height="40px" alt="User profile picture">
+            <span>Anthony L.</span>
+
+          </div>
         </div>
         <div class="grid-content-header-bottom">
           <div class="header-user-hi">Hi User</div>
@@ -60,7 +67,7 @@
               <p>Vivamus eu lorem dignissim, aliquam velit vitae, condimentum diam. Praesent gravida leo sit amet interdum lobortis. Vivamus fringilla massa sem, nec mollis quam maximus ac.</p>
             </div>
             <div class="card">Card 6
-              <p>Quisque facilisis massa turpis, quis vulputate nunc hendrerit ut. Aliquam tristique scelerisque justo non porttitor. Fusce auctor nunc ut dictum volutpat.</p>
+              <p>Image par <a href="https://pixabay.com/fr/users/saydung89-18713596/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5960112">Piyapong Saydaung</a> de <a href="https://pixabay.com/fr//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5960112">Pixabay</a></p>
             </div>
           </div>
         </div>
@@ -79,6 +86,7 @@
           </div>
         </div>
       </div>
+      
     </div>
   </div>
 </body>
