header top bar done

--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
     <div class="grid-right-side">
       <div class="grid-content-header">
         <div class="grid-content-header-top">
-          <div class="header-search">
+          <div class="header-top-left">
             <img src="img/search.svg" width="22px" height="22px" alt="magnifier">
             <input name="search" type="text">
+          </div>
 
+          <div class="header-top-right">
             <img src="img/notifications.svg" width="22px" height="22px" alt="bell-ring">
             <img src="img/profilepic.jpg" width="40px" height="40px" alt="User profile picture">
             <span>Anthony L.</span>
-
           </div>
+
+          
         </div>
         <div class="grid-content-header-bottom">
           <div class="header-user-hi">Hi User</div>
