header bottom part done

--- a/index.html
+++ b/index.html
@@ -46,8 +46,19 @@
           
         </div>
         <div class="grid-content-header-bottom">
-          <div class="header-user-hi">Hi User</div>
-          <div class="header-menu">New Upload Share</div>
+          <div class="header-bottom-left">
+            <img src="img/profilepic.jpg" width="70px" height="70px" alt="User profile picture">
+            <div class="header-user-hi">
+              <div>Hi there,</div>
+              <div><b>Anthony L. (@antho)</b></div>
+            </div>
+          </div>
+          <div class="header-bottom-right">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
+          
         </div>
       </div>
       <div class="grid-content-central">
