grid behaviour done

--- a/index.html
+++ b/index.html
@@ -90,12 +90,25 @@
         <div class="grid-content-central-side">
           <div class="side-wrapper">
             <div class="side-title">Announcements</div>
-            <p class="side-content">Etiam luctus bibendum tortor non venenatis. Nam aliquam quam id diam pellentesque, vitae tincidunt enim consequat. Phasellus varius</p>
+            <div class="side-content announcements">
+              <div>
+                <h4>Title 1</h4>
+                <p>Etiam luctus bibendum tortor non venenatis. Nam aliquam quam id diam pellentesque, vitae tincidunt enim consequat.</p>
+              </div>
+              <div>
+                <h4>Title 2</h4>
+                <p>Etiam luctus bibendum tortor non venenatis. Nam aliquam quam id diam pellentesque, vitae tincidunt enim consequat.</p>
+              </div>
+              <div>
+                <h4>Title 3</h4>
+                <p>Etiam luctus bibendum tortor non venenatis. Nam aliquam quam id diam pellentesque, vitae tincidunt enim consequat.</p>
+              </div>
+            </div>
           </div>
 
           <div class="side-wrapper">
             <div class="side-title">Trending</div>
-            <p class="side-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget pulvinar quam, vel scelerisque urna. Nunc mattis augue ligula, euismod bibendum tortor viverra vitae. Integer efficitur</p>
+            <p class="side-content trending">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget pulvinar quam, vel scelerisque urna. Nunc mattis augue ligula, euismod bibendum tortor viverra vitae. Integer efficitur</p>
               
           </div>
         </div>
